spatialite (4.2.1~rc0-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * Set experimental branch in Vcs-Git and gbp.conf.
  * Remove 03-link-m.patch, applied upstream.
  * Update package names for SONAME bump.
  * Update copyright file, consolidate files paragraphs.

 -- Bas Couwenberg <sebastic@xs4all.nl>  Sun, 26 Oct 2014 16:30:32 +0100

spatialite (4.2.0-1~exp1) experimental; urgency=low
 
  * New upstream release candidate.
  * Refresh patches.
  * Update copyright file.
  * Add patch to fix check_multithread build failure by linking libpthread.
  * Drop --enable-libxml2, libxml2 support is enabled by default now.
  * Add patch to fix 'successfully' typo.
  * Add mod-spatialite package for the loadable extension module.
  * Add patch to link libm for math functions.
  * Update symbols for 4.2.0 release.

 -- Bas Couwenberg <sebastic@xs4all.nl>  Sun, 03 Aug 2014 23:37:04 +0200

spatialite (4.1.1-10) unstable; urgency=medium

  * Enable verbose test output.
  * Ignore test failures instead of disabling many tests.
    (closes: #746912)

 -- Bas Couwenberg <sebastic@xs4all.nl>  Sun, 01 Jun 2014 13:39:11 +0200

spatialite (4.1.1-9) unstable; urgency=medium

  * Only install example C files, Makefile is architecture specific.
    (closes: #743683)

 -- Bas Couwenberg <sebastic@xs4all.nl>  Sat, 05 Apr 2014 13:06:36 +0200

spatialite (4.1.1-8) unstable; urgency=medium

  * Don't build (but do install) examples, causes gcc-4.8 to segfaul on armhf.

 -- Bas Couwenberg <sebastic@xs4all.nl>  Fri, 04 Apr 2014 11:56:16 +0200

spatialite (4.1.1-7) unstable; urgency=medium

  * Add NEWS entry for switch from SpatiaLite 3.0 to 4.1.
  * Drop lintian overrides for no-upstream-changelog.

 -- Bas Couwenberg <sebastic@xs4all.nl>  Thu, 03 Apr 2014 22:52:47 +0200

spatialite (4.1.1-6) unstable; urgency=low

  * Add gbp.conf to use pristine-tar by default.
  * Move from experimental to unstable.
